app/newhome/components/problemSection/problemSection.scss
$container-width: 1080px;

.problemSectionContainer {
  padding: 50px 0;
  overflow: hidden;

  .innerContainer {
    max-width: $container-width;
    margin: 0 auto;
  }

  @media (max-width: 768px) {
    padding-bottom: 100px;
    .innerContainer {
      padding-left: 15px;
      padding-right: 15px;
    }
  }
}

.subTitle {
  font-size: 18px;
  line-height: 2.81;
  letter-spacing: 7.8px;
  color: #bbc2d0;
  text-align: left;

  @media (max-width: 768px) {
    font-size: 12px;
    line-height: 4.21;
    letter-spacing: 5.2px;
  }
}

.title {
	font-size: 30px;
	line-height: 1.48;
  color: #0c1020;
  text-align: left;

  strong {
    font-weight: 700;
  }

  @media (max-width: 768px) {
      font-size: 18px;
      line-height: 1.56;
  }
}

.sliderContainer {
  padding: 50px 0;

  .sliderItem {
    margin: 20px 10px;
    padding: 0 16px;
    width: 480px;
    height: 165px;
    border-radius: 10px;
    background-color: #ffffff;
    box-shadow: 0 4px 15px 0 rgba(216, 221, 231, 0.64);
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    .iconWrapper {
      flex: 1 0 132px;
      svg {
        width: 132px;
      }
    }

    .itemText {
      flex: 1 1 auto;
      font-size: 16px;
      font-weight: 300;
      line-height: 1.78;
      letter-spacing: -0.8px;
      text-align: left;
      color: #0c1020;
    }
  }

  @media (max-width: 768px) {
    padding: 25px 15px 130px 15px;
    .sliderItem {
      margin: 10px 0;
      padding: 0 15px;
      width: 100%;
      height: 100px;
      border-radius: 6px;
      box-shadow: 0 2.5px 9px 0 rgba(216, 221, 231, 0.64);

      .iconWrapper {
        flex: 1 0 80px;
        svg {
          width: 64px;
        }
      }
      .itemText {
        font-size: 12px;
        font-weight: 300;
        line-height: 1.68;
      }
    }
  }
}

.sliderDots {
  text-align: center;

  li {
    display: inline-block;

    button {
      background: none;
      border: none;
      padding: 0;
      font-size: 0;
      width: 165px;
      height: 3px;
      background-color: #d9dee8;
      transition: background-color .4s ease;

      &:focus {
        outline: none;
      }
    }
  }
}

:global {
  .slick-active {
    button {
      background-color: #6096ff !important;
    }
  }

  .slick-list {
    max-width: $container-width;
    margin: 0 auto;
    overflow: initial;
  }
}

.catchPhraseContainer {
  position: relative;
  margin-top: 20px;
  padding-bottom: 25px;

  .catchPhrase {
    max-width: $container-width;
    width: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 27px;
    line-height: 1.6;
    color: #0c1020;
    text-align: center;
  }

  @media (max-width: 768px) {

    svg {
      width: 120%;
      margin-left: -10%;
    }

    .catchPhrase {
      padding-left: 15px;
      padding-right: 15px;
      font-size: 16px;
      line-height: 1.75;
    }
  }
}

